--- a/mariadbDemoFront/package.json
+++ b/mariadbDemoFront/package.json
@@ -9,16 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "element-plus": "^2.9.5",
-    "scss": "^0.2.4",
-    "vue": "^3.5.13"
+    "antd": "^5.24.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/tsconfig": "^0.7.0",
-    "sass-embedded": "^1.85.1",
-    "typescript": "~5.7.2",
-    "vite": "^6.2.1",
-    "vue-tsc": "^2.2.4"
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint-plugin-react": "^7.37.4"
   }
 }
